--- a/views/certifications.ejs
+++ b/views/certifications.ejs
@@ -12,12 +12,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <%- include("templates/header") %>
 
-    <title>Discord Lists | Certification <%= botid.botname %></title>
+    <title>Discord Lists | Certification</title>
   </head>
   <body>
-    <u><center><h1>Your are going to add <%= botid.botname %> bot for certification program</h1></center></u><br><br><br><br><br><br><br><br>
+    <u><center><h1>Your are going to add your bot to the certification program</h1></center></u><br><br><br>
+    <u><center><h3>Requirements:</h3></center></u>
+    <br>
+    <center>
+    <p>-Bot MUST be in over 50 servers</p>
+    <p>-Bot owner MUST have discord 2FA enabled</p>
+    <p>-Bot must have 100% uptime with the exception of bot downtime and error fixing</p>
+    <p>-Bot MUST be on the list for over 2 weeks</p>
+    <br>
+    <u><h4>Note: These requirements can be changed and current certified bots must still meet those new requirements.</h3></u>
+    </center>
+    <br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <center><form method="POST" action="/bot/certification/<%= botid.botid %>">
+    <center><form method="POST" action="/bot/<%= botid.botid %>/certification">
         
       </form></center>
   </body>
