--- a/views/me.ejs
+++ b/views/me.ejs
@@ -24,18 +24,20 @@
     <center><a   href="/staffpanel"><button class="button-main"><i class="fas fa-crown"></i> Staff Panel </button></a></center><br>
   <% } %>
     <center><a   href="/"><button class="button-main"><i class="fas fa-home"></i> Return Home </button></a></center><br><br>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+
+    <div class="secondary-bg p-4">
       <% bots.forEach(function(bot) { %>
-    <div class="col">
-      <div class="card h-500">
-        <div class="card-body">
-        <img src="<%= bot.botavatar %>"><br>
-          <h3 class="card-title"><%= bot.botname %></h3>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href="/bot/<%= bot.botid %>"><button class="button-main">View</button></a>
-            <a href="/bot/<%= bot.botid %>/edit" ><button class="button-main">Edit</button></a>
-           <a href="/bot/<%= bot.botid %>/delete" > <button class="button-main">Delete</button></a></div>
-        </div>
+      <div class="center-flex">
+      <img src="<%=bot.botavatar%>" alt="avatar"/>
+      </div>
+      <div class="center-flex">
+      <h3><%=bot.botname%><h3>
+      </div>
+      <div class="center-flex">
+                  <a href="/bot/<%= bot.botid %>"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
+            <a href="/bot/<%= bot.botid %>/edit" ><button class="button-main"><i class="fas fa-pencil-alt"></i> Edit </button></a>
+                       <a href="/bot/<%= bot.botid %>/Certification" > <button class="button-main" style="background:#1FD78D"><i class="fas fa-check-circle"></i>  Certification </button></a>
+           <a href="/bot/<%= bot.botid %>/delete" > <button class="button-main" style="background:#F62451"><i class="fas fa-trash"></i> Delete </button></a>
       </div>
     </div>
     <% }); %>
