--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -35,5 +35,21 @@
 			</div>
 
 		</footer>
+<footer style="
+    background: #171616;
+    color: #fff;
+    text-align: center;
+    font-size: 10px;
+"><div class="footer-wrap center flex">
+    <span> <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <polyline points="7 8 3 12 7 16"></polyline>
+  <polyline points="17 8 21 12 17 16"></polyline>
+  <line x1="14" y1="4" x2="10" y2="20"></line>
+</svg> with <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <path d="M19.5 13.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
+</svg> by <a href="https://github.com/memastermind" class="text-decoration-underline">MasterMind </a> and <a href="https://github.com/pasindudushan" class="text-decoration-underline">CrazyBotBoy</a>
+    </span></div></footer>
 </body>
 </html>
