--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,9 @@
         <div class="imgBx">
           <img src="<%= bot.botavatar %>">
         </div>
-        <div class="contentBx"><br>
-          <h2 style="font-size: 25xpx;"><%= bot.botname %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" width="38" height="38"></h2><br><br>
+        <div class="contentBx">
+          <h2><%= bot.botname %><img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" width="38" height="38"></h2>
+          <p><%=bot.shortdes%></p>
           <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
           <a href="<%= bot.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
@@ -47,10 +48,11 @@
         <div class="imgBx">
           <img src="<%= bot.botavatar %>">
         </div>
-        <div class="contentBx"><br>
+        <div class="contentBx">
           <h2><%= bot.botname %><% if(bot.certification === 'certified'){ %>
           <img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="38" width="38">
-        <% } %></h2><br><br>
+        <% } %></h2>
+          <p><%=bot.shortdes%></p>
           <a href="/bot/<%= bot.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
           <a href="<%= bot.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
@@ -71,10 +73,11 @@
         <div class="imgBx">
           <img src="<%= random.botavatar %>">
         </div>
-        <div class="contentBx"><br>
+        <div class="contentBx">
           <h2><%= random.botname %><% if(random.certification === 'certified'){ %>
           <img src="https://cdn.glitch.com/1be813f1-4233-4b7a-bf44-8a562481d51f%2FCertified.png?v=1625404757585" title="Certified Bot" height="38" width="38">
-        <% } %></h2><br><br>
+        <% } %></h2>
+          <p> <%=random.shortdes%> </p>
           <a href="/bot/<%= random.botid %>" class="viewbot"><button class="button-main"><i class="fas fa-eye"></i> View </button></a>
           <a href="<%= random.invite %>" class="invitebot"><button class="button-main"><i class="fas fa-arrow-right"></i> Invite </button></a>
         </div>
