--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -20,7 +20,7 @@
       <center></center><br>
       <center>
       
-      <% if(hasUserAlreadyVoted && hasUserAlreadyVoted12hr){%>
+      <% if( hasUserAlreadyVoted12hr){%>
 
         <button class="button-main disabled">🎉 Voted!</button>
 
