--- a/views/certifications.ejs
+++ b/views/certifications.ejs
@@ -24,12 +24,17 @@
     <p>-Bot must have 100% uptime with the exception of bot downtime and error fixing</p>
     <p>-Bot MUST be on the list for over 2 weeks</p>
     <br>
+    <center><form method="POST" action="/bot/<%= botid.botid %>/certification">
+        <button class="button-main" type="submit">Add for certification</button>
+    </form></center>
     <u><h4>Note: These requirements can be changed and current certified bots must still meet those new requirements.</h3></u>
+
+    <br><br>
+    <div class="center-flex">
+    <button class="button-main disabled">Coming Soon!</button>
+    </div>
     </center>
     <br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <center><form method="POST" action="/bot/<%= botid.botid %>/certification">
-        
-      </form></center>
   </body>
 </html>
