open source release!

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -13,7 +13,7 @@
         <%- include("templates/header") %>
 
 
-    <title>Discord Lists | 404 Error</title>
+    <title>Discord Lists | Error</title>
   </head>
   <body>
       <h1>Error</h1>
