--- a/public/css/main.css
+++ b/public/css/main.css
@@ -449,8 +449,9 @@ hr{
   display: flex;
   align-items:center;
   justify-content: center;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   padding: 30px;
+  font-size: 30px;
 }
 
 form{
