--- a/views/staff-apps.ejs
+++ b/views/staff-apps.ejs
@@ -1,11 +1,9 @@
  <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
 <br><Br><Br><Br>
-<head><title>Report Bugs</title></head>
-<H1><i class="fas fa-bug"></i> Bug Reports <H1>
+<H1><i class="fas fa-user-check"></i> Bug Reports <H1>
 <p style="padding:100px">Found a Vulnerability? Bug? Something unexpected? Report here! Make sure to join our Discord. We will respond as soon as we can. In case of any issues, contact a staff or a mod, they will assist you.</p>
 <br>
-
 <form onsubmit=reportBug() id="bugform">
 <div id="bugformDIV">
 <input id="bugTitle" placeholder="Title" type="text" class="form-input"required></input>
