Updated website footer and fixed staff panel issue.

--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -53,7 +53,7 @@
       </div>
       <br>
       <br>
-      <p class="mb-8 leading-relaxed deslong"><%=deslong%></p>
+      <p class="mb-8 leading-relaxed deslong"><%-deslong%></p>
       <div class="flex justify-center">
         <a href="/bot/<%=botid.botid%>/vote"><button class="button-main"><i class="fas fa-arrow-up"></i> Vote </button></a>
         <a href="<%=botid.invite%>" class="underline"><button class="button-main" style="background:none !important ;color:var(--main-bg-color);font-weight:bold;"><i class="fas fa-arrow-right"></i> Invite </button></a>
