--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <%- include('./templates/header.ejs') %>
  <%- include('./templates/nav.ejs') %> 
+ <head><title>Discord Lists</title></head>
 <br><Br>
 <img src="https://cdn.discordapp.com/attachments/870296629134114817/870305666978439208/Discord_Lists_V6_Logo.png" class="top-img"/>
 <br>
