--- a/views/add.ejs
+++ b/views/add.ejs
@@ -55,11 +55,11 @@
         </div><br>
         <div class="col-md-4">
             <label for="validationCustom01" class="form-label">Support Server URL</label>
-            <input type="text" class="form-control" name="server" id="validationCustom01" placeholder="discord.gg/minecraft">
+            <input type="text" class="form-control" name="server" id="validationCustom01" placeholder="https://discord.gg/minecraft">
         </div><br>
         <div class="col-md-4">
             <label for="validationCustom01" class="form-label">Invite URL. *</label>
-            <input type="text" class="form-control" name="invite" id="validationCustom01" placeholder="discord.com/oath/" required>
+            <input type="text" class="form-control" name="invite" id="validationCustom01" placeholder="" required>
         </div><br>
 					<script defer>
 						jQuery("#tags">.val("<?= newsPost.tags ?>")
@@ -70,6 +70,7 @@
                     <label><input name="tags" type="checkbox" value="Moderation">Moderation</label>
                     <label><input name="tags" type="checkbox" value="Anime">Anime</label>
                     <label><input name="tags" type="checkbox" value="Utility">Utility</label>
+                    <label><input name="tags" type="checkbox" value="Music">Music</label>
                     <label><input name="tags" type="checkbox" value="Leveling">Leveling</label>
                     <label><input name="tags" type="checkbox" value="Economy">Economy</label>
                     <label><input name="tags" type="checkbox" value="Game">Game</label>
