--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
      <% } %>
 
 <br><br><br><br><br>
-    <h2 class="heading"><i class="fas fa-list"></i> Other Bots</h2><br><br>
+    <h2 class="heading"><i class="fas fa-arrow-up"></i> Top Voted Bots</h2><br><br>
      <% if(verified_bots.length === 0){ %>
         <h3 class="text-center">No Bots found. Please visit us later.</h3>
       <% } else{ %>
