--- a/views/me.ejs
+++ b/views/me.ejs
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSxS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <%- include("templates/header") %>
 
@@ -23,6 +23,7 @@
     <% if(userHasAccessToStaffPanel){ %>
     <center><a   href="/staffpanel"><button class="button-main"><i class="fas fa-crown"></i> Staff Panel </button></a></center><br>
   <% } %>
+
     <center><a   href="/"><button class="button-main"><i class="fas fa-home"></i> Return Home </button></a></center><br><br>
 
     <div class="secondary-bg p-4">
